--- a/Index.html
+++ b/Index.html
@@ -31,14 +31,11 @@
           <li class="nav-item">
             <a href="#menu" class="nav-link">Portafolio</a>
           </li>
+          <!-- <li class="nav-item">
+            <a href="#" class="nav-link">Testimonio</a>
+          </li> -->
           <li class="nav-item">
-            <a href="#testimonials" class="nav-link">Testimonials</a>
-          </li>
-          <li class="nav-item">
-            <a href="#gallery" class="nav-link">Gallery</a>
-          </li>
-          <li class="nav-item">
-            <a href="#contact" class="nav-link">Contact</a>
+            <a href="#contactanos" class="nav-link">Contactanos</a>
           </li>
         </ul>
 
@@ -51,7 +48,7 @@
       <section class="hero-section">
         <div class="section-content">
           <div class="hero-details">
-            <h2 class="title">Best Coffee</h2>
+            <h2 class="title">MakeCodersJM</h2>
             <h3 class="subtitle">Make your day great with our special coffee!</h3>
             <p class="description">Welcome to our coffee paradise, where every bean tells a story and every cup sparks joy.</p>
 
