--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Coffee Website | CodingNepal</title>
+    <title>CodeMakers JM</title>
     <!-- Linking Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
     <!-- Linking Swiper CSS -->
@@ -48,8 +48,8 @@
       <section class="hero-section">
         <div class="section-content">
           <div class="hero-details">
-            <h2 class="title">MakeCodersJM</h2>
-            <h3 class="subtitle">Make your day great with our special coffee!</h3>
+            <h2 class="title">CodeMakers JM</h2>
+            <h3 class="subtitle">Innovación y diseño web que se adaptan a tus necesidades!</h3>
             <p class="description">Welcome to our coffee paradise, where every bean tells a story and every cup sparks joy.</p>
 
             <div class="buttons">
