--- a/Index.html
+++ b/Index.html
@@ -35,7 +35,7 @@
             <a href="#" class="nav-link">Testimonio</a>
           </li> -->
           <li class="nav-item">
-            <a href="#contactanos" class="nav-link">Contactanos</a>
+            <a href="#contact" class="nav-link">Contactanos</a>
           </li>
         </ul>
 
@@ -50,7 +50,7 @@
           <div class="hero-details">
             <h2 class="title">CodeMakers JM</h2>
             <h3 class="subtitle">Innovación y diseño web que se adaptan a tus necesidades!</h3>
-            <p class="description">Welcome to our coffee paradise, where every bean tells a story and every cup sparks joy.</p>
+            <p class="description">Ofrecemos soluciones personalizadas en la creación de páginas web, enfocándonos en la calidad y la originalidad.</p>
 
             <div class="buttons">
               <a href="#" class="button order-now">Order Now</a>
@@ -70,8 +70,8 @@
             <img src="images/about-image.jpg" alt="About" class="about-image" />
           </div>
           <div class="about-details">
-            <h2 class="section-title">About Us</h2>
-            <p class="text">At Coffee House in Berndorf, Germany, we pride ourselves on being a go-to destination for coffee lovers and conversation seekers alike. We're dedicated to providing an exceptional coffee experience in a cozy and inviting atmosphere, where guests can relax, unwind, and enjoy their time in comfort.</p>
+            <h2 class="section-title">Sobre nosotros</h2>
+            <p class="text">En nuestra empresa nos enfocamos en brindar soluciones únicas y adaptadas a las necesidades específicas de cada cliente. Con un enfoque en la calidad y la innovación, trabajamos de la mano con nuestros clientes para entender sus desafíos y ofrecer aplicaciones que optimicen sus procesos y mejoren su eficiencia. Nuestro objetivo es crear herramientas que no solo satisfagan, sino que superen las expectativas, impulsando así el crecimiento y el éxito de cada negocio.</p>
             <div class="social-link-list">
               <a href="#" class="social-link"><i class="fa-brands fa-facebook"></i></a>
               <a href="#" class="social-link"><i class="fa-brands fa-instagram"></i></a>
@@ -83,7 +83,7 @@
 
       <!-- Menu section -->
       <section class="menu-section" id="menu">
-        <h2 class="section-title">Our Menu</h2>
+        <h2 class="section-title">Nuestro portafolio</h2>
         <div class="section-content">
           <ul class="menu-list">
             <li class="menu-item">
@@ -206,38 +206,20 @@
 
       <!-- Contact section -->
       <section class="contact-section" id="contact">
-        <h2 class="section-title">Contact Us</h2>
+        <h2 class="section-title">Contactanos</h2>
         <div class="section-content">
-          <ul class="contact-info-list">
-            <li class="contact-info">
-              <i class="fa-solid fa-location-crosshairs"></i>
-              <p>123 Campsite Avenue, Wilderness, CA 98765</p>
-            </li>
-            <li class="contact-info">
-              <i class="fa-regular fa-envelope"></i>
-              <p>info@coffeeshopwebsite.com</p>
-            </li>
-            <li class="contact-info">
-              <i class="fa-solid fa-phone"></i>
-              <p>(123) 456-78909</p>
-            </li>
-            <li class="contact-info">
-              <i class="fa-regular fa-clock"></i>
-              <p>Monday - Friday: 9:00 AM - 5:00 PM</p>
-            </li>
-            <li class="contact-info">
-              <i class="fa-regular fa-clock"></i>
-              <p>Saturday: 10:00 AM - 3:00 PM</p>
-            </li>
-            <li class="contact-info">
-              <i class="fa-regular fa-clock"></i>
-              <p>Sunday: Closed</p>
-            </li>
-            <li class="contact-info">
-              <i class="fa-solid fa-globe"></i>
-              <p>www.codingnepalweb.com</p>
-            </li>
-          </ul>
+        
+          <div>
+            <img class="sami" src="mainpage/assets/images/sami.jpg" alt="" >
+            <h4 class="nombre" >@CodeMakers_JM</h4>
+            <a href="https://www.instagram.com/samiialvarezlondono?igsh=MWg4d2o4OW41cjh2eA==" class="boton">Instagram</a>
+        </div>
+        <div>
+        <img class="usme" src="mainpage/assets/images/usme.jpeg" alt="" >
+        <h4 class="nombre" >CodeMakers JM</h4>
+        <a href="https://www.instagram.com/juancho_u1012?igsh=OGQ5ZDc2ODk2ZA==" class="boton">Whatsapp</a>
+        </div>
+    </div>
 
           <form action="#" class="contact-form">
             <input type="text" placeholder="Your name" class="form-input" required />
