--- a/Index.html
+++ b/Index.html
@@ -210,7 +210,7 @@
         <div class="section-content">
         
           <div>
-            <img class="sami" src="mainpage/assets/images/sami.jpg" alt="" >
+            <img class="sami" src="/Media/icons8-instagram-300.png" alt="" >
             <h4 class="nombre" >@CodeMakers_JM</h4>
             <a href="https://www.instagram.com/samiialvarezlondono?igsh=MWg4d2o4OW41cjh2eA==" class="boton">Instagram</a>
         </div>
