--- a/Index.html
+++ b/Index.html
@@ -215,7 +215,7 @@
             <a href="https://www.instagram.com/samiialvarezlondono?igsh=MWg4d2o4OW41cjh2eA==" class="boton">Instagram</a>
         </div>
         <div>
-        <img class="usme" src="mainpage/assets/images/usme.jpeg" alt="" >
+        <img class="usme" src="/Media/icons8-whatsapp-300.png" alt="" >
         <h4 class="nombre" >CodeMakers JM</h4>
         <a href="https://www.instagram.com/juancho_u1012?igsh=OGQ5ZDc2ODk2ZA==" class="boton">Whatsapp</a>
         </div>
