--- a/Index.html
+++ b/Index.html
@@ -225,7 +225,7 @@
       <!-- Footer section -->
       <footer class="footer-section">
         <div class="section-content">
-          <p class="copyright-text">© 2024 Coffee Shop</p>
+          <p class="copyright-text">© 2024 CodeMakers_JM</p>
           <h1>Software 100% colombiano</h1>
           <p class="policy-text">
             <a href="#" class="policy-link">Privacy policy</a>
