--- a/Index.html
+++ b/Index.html
@@ -81,56 +81,74 @@
         </div>
       </section>
 
-      <!-- Menu section -->
-      <section class="menu-section" id="menu">
-        <h2 class="section-title">Our Menu</h2>
-        <div class="section-content">
-          <ul class="menu-list">
-            <li class="menu-item">
-              <img src="images/hot-beverages.png" alt="Hot Beverages" class="menu-image" />
-              <div class="menu-details">
-                <h3 class="name">Hot Beverages</h3>
-                <p class="text">Wide range of Steaming hot coffee to make you fresh and light.</p>
-              </div>
-            </li>
-            <li class="menu-item">
-              <img src="images/cold-beverages.png" alt="Cold Beverages" class="menu-image" />
-              <div class="menu-details">
-                <h3 class="name">Cold Beverages</h3>
-                <p class="text">Creamy and frothy cold coffee to make you cool.</p>
-              </div>
-            </li>
-            <li class="menu-item">
-              <img src="images/refreshment.png" alt="Refreshment" class="menu-image" />
-              <div class="menu-details">
-                <h3 class="name">Refreshment</h3>
-                <p class="text">Fruit and icy refreshing drink to make feel refresh.</p>
-              </div>
-            </li>
-            <li class="menu-item">
-              <img src="images/special-combo.png" alt="Special Combos" class="menu-image" />
-              <div class="menu-details">
-                <h3 class="name">Special Combos</h3>
-                <p class="text">Your favorite eating and drinking combations.</p>
-              </div>
-            </li>
-            <li class="menu-item">
-              <img src="images/desserts.png" alt="Dessert" class="menu-image" />
-              <div class="menu-details">
-                <h3 class="name">Dessert</h3>
-                <p class="text">Satiate your palate and take you on a culinary treat.</p>
-              </div>
-            </li>
-            <li class="menu-item">
-              <img src="images/burger-frenchfries.png" alt="burger & French Fries" class="menu-image" />
-              <div class="menu-details">
-                <h3 class="name">Burger & French Fries</h3>
-                <p class="text">Quick bites to satisfy your small size hunger.</p>
-              </div>
-            </li>
-          </ul>
+<!-- Menu section / Projects -->
+<section class="projects-section" id="menu">
+  <h2 class="section-title">Nuestros proyectos</h2>
+  <div class="projects-content">
+    <ul class="projects-list">
+      <!-- Project 1: Proyecto administrativo (SENA) -->
+      <li class="project-item card">
+        <div class="card-image image-gallery">
+          <div class="zoom-container">
+            <img src="img/sena1.png" alt="Proyecto administrativo (SENA) - Image 1" class="menu-image zoom-img" />
+            <div class="zoom-icon" onclick="enableZoom(this)">🔍</div>
+          </div>
+          <div class="zoom-container">
+            <img src="img/sena2.png" alt="Proyecto administrativo (SENA) - Image 2" class="menu-image zoom-img" />
+            <div class="zoom-icon" onclick="enableZoom(this)">🔍</div>
+          </div>
         </div>
-      </section>
+        <div class="card-content">
+          <h3 class="name">Proyecto administrativo (SENA)</h3>
+          <p class="text">Un proyecto destinado al área administrativa, diseñado para optimizar la gestión interna del SENA.</p>
+        </div>
+      </li>
+
+      <!-- Project 2: Times -->
+      <li class="project-item card">
+        <div class="card-image image-gallery">
+          <div class="zoom-container">
+            <img src="img/agenda1.png" alt="Project 2 - Image 1" class="menu-image zoom-img" />
+            <div class="zoom-icon" onclick="enableZoom(this)">🔍</div>
+          </div>
+          <div class="zoom-container">
+            <img src="img/agenda2.png" alt="Project 2 - Image 2" class="menu-image zoom-img" />
+            <div class="zoom-icon" onclick="enableZoom(this)">🔍</div>
+          </div>
+          <div class="zoom-container">
+            <img src="img/agenda3.png" alt="Project 2 - Image 3" class="menu-image zoom-img" />
+            <div class="zoom-icon" onclick="enableZoom(this)">🔍</div>
+          </div>
+        </div>
+        <div class="card-content">
+          <h3 class="name">Times</h3>
+          <p class="text">Proyecto colaborativo aplicado a la gestión de horarios de una empresa.</p>
+        </div>
+      </li>
+
+      <!-- Add more projects as needed... -->
+    </ul>
+  </div>
+</section>
+
+<script>
+  function enableZoom(element) {
+    // Toggle the 'zoom-active' class to enable/disable zoom
+    const zoomContainer = element.parentElement;
+    zoomContainer.classList.toggle('zoom-active');
+  }
+</script>
+
+
+
+
+<!-- Modal for image enlargement -->
+<div id="imageModal" class="modal">
+  <span class="close" onclick="closeModal()">&times;</span>
+  <img class="modal-content" id="expandedImage">
+  <div id="caption"></div>
+</div>
+
 
       <!-- Testimonials section -->
       <section class="testimonials-section" id="testimonials">
@@ -209,10 +227,9 @@
         <h2 class="section-title">Contact Us</h2>
         <div class="section-content">
           <ul class="contact-info-list">
-            <li class="contact-info">
+            <!-- <li class="contact-info">
               <i class="fa-solid fa-location-crosshairs"></i>
-              <p>123 Campsite Avenue, Wilderness, CA 98765</p>
-            </li>
+            </li> -->
             <li class="contact-info">
               <i class="fa-regular fa-envelope"></i>
               <p>info@coffeeshopwebsite.com</p>
@@ -221,18 +238,18 @@
               <i class="fa-solid fa-phone"></i>
               <p>(123) 456-78909</p>
             </li>
-            <li class="contact-info">
+            <!-- <li class="contact-info">
               <i class="fa-regular fa-clock"></i>
               <p>Monday - Friday: 9:00 AM - 5:00 PM</p>
-            </li>
-            <li class="contact-info">
+            </li> -->
+            <!-- <li class="contact-info">
               <i class="fa-regular fa-clock"></i>
               <p>Saturday: 10:00 AM - 3:00 PM</p>
             </li>
             <li class="contact-info">
               <i class="fa-regular fa-clock"></i>
               <p>Sunday: Closed</p>
-            </li>
+            </li> -->
             <li class="contact-info">
               <i class="fa-solid fa-globe"></i>
               <p>www.codingnepalweb.com</p>
