--- a/Index.html
+++ b/Index.html
@@ -224,17 +224,19 @@ function enableZoom(element) {
       <section class="contact-section" id="contact">
         <h2 class="section-title">Contactanos</h2>
         <div class="section-content">
-          <div>
-            <img class="sami" src="/Media/icons8-instagram-300.png" alt="" >
-            <h4 class="nombre" >@CodeMakers_JM</h4>
-            <a href="https://www.instagram.com/samiialvarezlondono?igsh=MWg4d2o4OW41cjh2eA==" class="boton">Instagram</a>
+          <div class="container">
+            <div class="Cont">
+                <img class="Insta" src="/Media/icons8-instagram-300.png" alt="" >
+                <h4 class="nombre" >@CodeMakers_JM</h4>
+                <a href="https://www.instagram.com/samiialvarezlondono?igsh=MWg4d2o4OW41cjh2eA==" class="boton">Instagram</a>
+            </div>
+            <div class="Cont">
+                <img class="What" src="/Media/icons8-whatsapp-300.png" alt="" >
+                <h4 class="nombre" >CodeMakers JM</h4>
+                <a href="https://www.instagram.com/juancho_u1012?igsh=OGQ5ZDc2ODk2ZA==" class="boton">Whatsapp</a>
+            </div>
         </div>
-        <div>
-        <img class="usme" src="/Media/icons8-whatsapp-300.png" alt="" >
-        <h4 class="nombre" >CodeMakers JM</h4>
-        <a href="https://www.instagram.com/juancho_u1012?igsh=OGQ5ZDc2ODk2ZA==" class="boton">Whatsapp</a>
-        </div>
-    </div>
+        
       </section>
 
       <!-- Footer section -->
