--- a/Index.html
+++ b/Index.html
@@ -67,7 +67,7 @@
       <section class="about-section" id="about">
         <div class="section-content">
           <div class="about-image-wrapper">
-            <img src="images/about-image.jpg" alt="About" class="about-image" />
+            <img src="img/about.png" alt="About" class="about-image" />
           </div>
           <div class="about-details">
             <h2 class="section-title">Sobre nosotros</h2>
@@ -80,13 +80,16 @@
           </div>
         </div>
       </section>
-<!-- Menu section / Projects -->
+
+
+      <!-- Menu section / Projects -->
 <section class="projects-section" id="menu">
   <h2 class="section-title">Nuestros proyectos</h2>
   <div class="projects-content">
-    <ul class="projects-list">
+    <div class="projects-container">
       <!-- Project 1: Proyecto administrativo (SENA) -->
-      <li class="project-item card">
+      <div class="project-card card">
+        <h3 class="name">Proyecto administrativo (SENA)</h3>
         <div class="card-image image-gallery">
           <div class="zoom-container">
             <img src="img/sena1.png" alt="Proyecto administrativo (SENA) - Image 1" class="menu-image zoom-img" />
@@ -97,14 +100,12 @@
             <div class="zoom-icon" onclick="enableZoom(this)">🔍</div>
           </div>
         </div>
-        <div class="card-content">
-          <h3 class="name">Proyecto administrativo (SENA)</h3>
-          <p class="text">Un proyecto destinado al área administrativa, diseñado para optimizar la gestión interna del SENA.</p>
-        </div>
-      </li>
+        <p class="text">Un proyecto destinado al área administrativa, diseñado para optimizar la gestión interna del SENA.</p>
+      </div>
 
       <!-- Project 2: Times -->
-      <li class="project-item card">
+      <div class="project-card card">
+        <h3 class="name">Times</h3>
         <div class="card-image image-gallery">
           <div class="zoom-container">
             <img src="img/agenda1.png" alt="Project 2 - Image 1" class="menu-image zoom-img" />
@@ -119,14 +120,11 @@
             <div class="zoom-icon" onclick="enableZoom(this)">🔍</div>
           </div>
         </div>
-        <div class="card-content">
-          <h3 class="name">Times</h3>
-          <p class="text">Proyecto colaborativo aplicado a la gestión de horarios de una empresa.</p>
-        </div>
-      </li>
+        <p class="text">Proyecto colaborativo aplicado a la gestión de horarios de una empresa.</p>
+      </div>
 
       <!-- Add more projects as needed... -->
-    </ul>
+    </div>
   </div>
 </section>
 
@@ -136,9 +134,6 @@ function enableZoom(element) {
   zoomContainer.classList.toggle('zoom-active');
 }
 </script>
-
-
-
 
 <!-- Modal for image enlargement -->
 <div id="imageModal" class="modal">
@@ -190,33 +185,6 @@ function enableZoom(element) {
               <div class="swiper-slide-button swiper-button-next"></div>
             </div>
           </div>
-        </div>
-      </section>
-
-      <!-- Gallery section -->
-      <section class="gallery-section" id="gallery">
-        <h2 class="section-title">Gallery</h2>
-        <div class="section-content">
-          <ul class="gallery-list">
-            <li class="gallery-item">
-              <img src="images/gallery-1.jpg" alt="Gallery Image" class="gallery-image" />
-            </li>
-            <li class="gallery-item">
-              <img src="images/gallery-2.jpg" alt="Gallery Image" class="gallery-image" />
-            </li>
-            <li class="gallery-item">
-              <img src="images/gallery-3.jpg" alt="Gallery Image" class="gallery-image" />
-            </li>
-            <li class="gallery-item">
-              <img src="images/gallery-4.jpg" alt="Gallery Image" class="gallery-image" />
-            </li>
-            <li class="gallery-item">
-              <img src="images/gallery-5.jpg" alt="Gallery Image" class="gallery-image" />
-            </li>
-            <li class="gallery-item">
-              <img src="images/gallery-6.jpg" alt="Gallery Image" class="gallery-image" />
-            </li>
-          </ul>
         </div>
       </section>
 
