--- a/Index.html
+++ b/Index.html
@@ -145,7 +145,7 @@ function enableZoom(element) {
 
       <!-- Testimonials section -->
       <section class="testimonials-section" id="testimonials">
-        <h2 class="section-title">Testimonials</h2>
+        <h2 class="section-title">Testimonios</h2>
         <div class="section-content">
           <div class="slider-container swiper">
             <div class="slider-wrapper">
