--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
     <header>
       <nav class="navbar">
         <a href="#" class="nav-logo">
-          <h2 class="logo-text"></></h2>
+          <h2 class="logo-text">💻</></h2>
         </a>
 
         <ul class="nav-menu">
