--- a/Index.html
+++ b/Index.html
@@ -58,7 +58,7 @@
             </div>
           </div>
           <div class="hero-image-wrapper">
-            <img src="images/coffee-hero-section.png" alt="Coffee" class="hero-image" />
+            <img src="/Media/Logo.jpg" alt="Coffee" class="hero-image" />
           </div>
         </div>
       </section>
