--- a/Index.html
+++ b/Index.html
@@ -58,7 +58,7 @@
             </div>
           </div>
           <div class="hero-image-wrapper">
-            <img src="images/coffee-hero-section.png" alt="Coffee" class="hero-image" />
+            <img src="Media/image.png" alt="Coffee" class="hero-image" />
           </div>
         </div>
       </section>
@@ -141,9 +141,7 @@ function enableZoom(element) {
   <img class="modal-content" id="expandedImage">
   <div id="caption"></div>
 </div>
-
-
-      <!-- Testimonials section -->
+ <!-- Testimonials section -->
       <section class="testimonials-section" id="testimonials">
         <h2 class="section-title">Testimonios</h2>
         <div class="section-content">
